handle register and login backend

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Information"
     }
-  }
+  },
+  "TokenKey": "Super secret ket for token generation generation generation generation"
 }
